# recipe_box

./: db.sqlite3  pyproject.toml
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_author_favorites.py  0002_auto_20200910_1845.py  0003_auto_20200910_1829.py
recipe_box/: settings.py  urls.py
templates/: author_details.html  generic_form.html  index.html  recipe_details.html
